# zenith-nlp-framework

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MODEL_CARD.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
configs/: config.yaml
configs/data/: tiny.yaml
configs/model/: decoder.yaml
configs/peft/: lora.yaml  none.yaml
configs/tokenizer/: bpe.yaml  byte.yaml
configs/tracking/: mlflow.yaml
configs/training/: default.yaml
data/: instructions.jsonl  tiny_corpus.txt
docs/: modules.md
docs/adr/: 0001-generative-identity.md  0002-byte-level-tokenizer.md  0003-kv-cache-and-decoding.md  0004-scaling-opt-in.md  0005-run-records-and-reproducibility.md  0006-serving-and-streaming.md  0007-bpe-and-benchmarks.md  0008-polaris-interop.md  0009-modern-architecture.md  0010-speculative-decoding.md  0011-instruction-tuning.md  0012-grounded-hooks.md  README.md
docs/design/: phase_01_core_generative.md  phase_02_decoding.md  phase_03_scaling.md  phase_04_tracking.md  phase_05_serving.md  phase_06_capstone.md  phase_07_sibling.md  phase_08_modern_arch.md  phase_09_scaling.md  phase_10_speculative.md  phase_11_instruct.md  phase_12_grounded_hooks.md
examples/: encode_and_generate.py
runs/: config.json  environment.json  metrics.json  run.json  samples.txt
scripts/: download_corpus.py  download_text8.py  finetune_instruct.py  plot_benchmarks.py  render_demo_gif.py  scaling_study.py  speculative_demo.py
src/zenith/: __init__.py  checkpoint.py  quantize.py  utils.py
tests/test_console/: test_repl.py
tests/test_data/: test_dataset.py
tests/test_distributed/: test_ddp.py
tests/test_evaluation/: test_metrics.py
tests/test_experiments/: test_experiments.py
tests/test_generation/: test_abstain.py  test_constraints.py  test_generator.py  test_speculative.py
tests/test_instruct/: test_grounded.py  test_instruct.py  test_meridian_acceptance.py
tests/test_interop/: test_polaris.py
tests/test_models/: test_decoder.py  test_sdpa.py
tests/test_peft/: test_lora.py
tests/test_quantize/: test_quantize.py
tests/test_serving/: test_api.py
(+45 files in other folders)
